ignore tex compiled files

--- a/.gitignore
+++ b/.gitignore
@@ -13,3 +13,13 @@ VSCache/
 *.ilk
 
 __pycache__/
+
+## compiled files from docs
+*.aux
+*.pdf
+*.toc
+*.fdb_latexmk
+*.out
+*.log
+*.fls
+*.synctex.gz
