Sphinx docs demo

--- a/docs/Makefile
+++ b/docs/Makefile
@@ -6,12 +6,21 @@ SPHINXOPTS    =
 SPHINXBUILD   = sphinx-build
 SOURCEDIR     = .
 BUILDDIR      = _build
+DOXYGENDIR    = ../OneDQuantum/docs
+DOXYGENXML    = ../OneDQuantum/docs/xml
 
 # Put it first so that "make" without argument is like "make help".
 help:
 	@$(SPHINXBUILD) -M help "$(SOURCEDIR)" "$(BUILDDIR)" $(SPHINXOPTS) $(O)
 
-.PHONY: help Makefile
+.PHONY: help Makefile doxygen
+
+doxygen: 
+	cd "$(DOXYGENDIR)"; \
+	doxygen
+
+clib: Makefile
+	breathe-apidoc -o $@ "$(DOXYGENXML)" 
 
 # Catch-all target: route all unknown targets to Sphinx using the new
 # "make mode" option.  $(O) is meant as a shortcut for $(SPHINXOPTS).
