--- a/docs/Makefile
+++ b/docs/Makefile
@@ -13,7 +13,7 @@ DOXYGENXML    = ../OneDQuantum/docs/xml
 help:
 	@$(SPHINXBUILD) -M help "$(SOURCEDIR)" "$(BUILDDIR)" $(SPHINXOPTS) $(O)
 
-.PHONY: help Makefile doxygen
+.PHONY: help Makefile doxygen clean
 
 doxygen: 
 	cd "$(DOXYGENDIR)"; \
@@ -22,7 +22,10 @@ doxygen:
 clib: Makefile
 	breathe-apidoc -o $@ "$(DOXYGENXML)" 
 
+clean:
+	@$(RM) -r $(BUILDDIR)
+
 # Catch-all target: route all unknown targets to Sphinx using the new
 # "make mode" option.  $(O) is meant as a shortcut for $(SPHINXOPTS).
-%: Makefile
+%: Makefile doxygen
 	@$(SPHINXBUILD) -M $@ "$(SOURCEDIR)" "$(BUILDDIR)" $(SPHINXOPTS) $(O)
