add documents travis-ci test

--- a/.travis.yml
+++ b/.travis.yml
@@ -3,7 +3,15 @@ python:
     - "3.6"
 sudo: false
 env:
-    - OMP_NUM_THREADS=4
+    - OMP_NUM_THREADS=4 
+addons:
+    apt:
+        packages:
+            - doxygen
+            - doxygen-doc 
+            - doxygen-latex
+            - doxygen-gui
+            - graphviz
 install:
     - pip install -r requirements.txt
     - python install.py
@@ -11,3 +19,4 @@ script:
     - pytest -v test/SimpleSchrodinger.py
     - python test/SimpleSchrodinger.py MP
     - pytest -v test/testMaterial.py
+    - cd docs; make html
