finish solve_basis, add automated testing

--- a/.travis.yml
+++ b/.travis.yml
@@ -20,3 +20,4 @@ script:
     - python test/SimpleSchrodinger.py MP
     - pytest -v test/testMaterial.py
     - cd docs; make html
+    - pytest -v test/testQCLayers.py
