--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,5 @@
 *.so
+*.dylib
 *.o
 *.dll
 *.exp
@@ -29,3 +30,5 @@ __pycache__/
 ## doxygen gnerated file for C code
 OneDQuantum/docs/html/
 OneDQuantum/docs/xml/
+
+.DS_Store
