prepare for read the doc

--- a/.gitignore
+++ b/.gitignore
@@ -30,6 +30,7 @@ __pycache__/
 ## doxygen gnerated file for C code
 OneDQuantum/docs/html/
 OneDQuantum/docs/xml/
+OneDQuantum/docs/latex/
 example/*
 !example/PQLiu*
 
