--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
-[submodule "OneDQuantum/pocketfft"]
-	path = OneDQuantum/pocketfft
-	url = https://gitlab.mpcdf.mpg.de/mtr/pocketfft.git
+[submodule "OneDQuantum/fftautocorr"]
+	path = OneDQuantum/fftautocorr
+	url = https://github.com/CareF/fftautocorr
