update Makefile for mac and clang

--- a/OneDQuantum/Makefile
+++ b/OneDQuantum/Makefile
@@ -1,6 +1,7 @@
 CFLAGS += -Ofast -Wall -fPIC #-D _DEBUG
 # CC = icc
 # CFLAGS = -march=native -Ofast -gcc-name=gcc-6 -Wall
+OMPFLAGS = -fopenmp
 
 ifeq ($(OS),Windows_NT)
     CFLAGS += -D WIN32
@@ -10,6 +11,8 @@ else
     ifeq ($(UNAME_S),Darwin)
         CFLAGS += -D MACOS
         EXT := dylib
+        OMPFLAGS += -I/usr/local/opt/llvm/includ 
+        LDFLAGS += -L/usr/local/opt/llvm/lib
     else
         # Assuming linux
         EXT := so
@@ -25,7 +28,7 @@ all: 1DSchrodinger.$(EXT) 1DThermal.$(EXT) 1DMaxwell.$(EXT)
 MP:  1DSchrodinger_MP.$(EXT)
 
 1DSchrodinger_MP.$(EXT) : 1DSchrodinger_MP.o band.o fftautocorr.o
-	$(CC) -shared -fPIC -fopenmp $^ -o $@ -lm
+	$(CC) -shared -fPIC $(OMPFLAGS) $^ -o $@ -lm $(LDFLAGS)
 
 1DSchrodinger.$(EXT) : 1DSchrodinger.o band.o fftautocorr.o
 	$(CC) -shared -fPIC $^ -o $@ -lm
@@ -37,7 +40,7 @@ MP:  1DSchrodinger_MP.$(EXT)
 	$(CC) $(CFLAGS) -c $< -o $@
 
 1DSchrodinger_MP.o : 1DSchrodinger.c science.h band.h fftautocorr/fftautocorr.h
-	$(CC) $(CFLAGS) -fopenmp -D __MP -c $< -o $@
+	$(CC) $(CFLAGS) -D __MP $(OMPFLAGS) -c $< -o $@
 
 fftautocorr.o : fftautocorr/fftautocorr.c fftautocorr/fftautocorr.h fftautocorr/factortable.h
 	$(CC) $(CFLAGS) -c $< -o $@
