--- a/.travis.yml
+++ b/.travis.yml
@@ -56,4 +56,22 @@ jobs:
       - CC=/usr/local/opt/llvm/bin/clang OMP_NUM_THREADS=4 
     script:
       - python3 test/SimpleSchrodinger.py MP
+  - name: Windows
+    # currently only building is tested
+    os: windows
+    language: shell
+    before_install:
+      - choco install python --version 3.8.0
+      - python -m pip install --upgrade pip
+    env: 
+      - PATH=/c/Python38:/c/Python38/Scripts:$PATH MSBUILD_PATH="/C/Program Files (x86)/Microsoft Visual Studio/2017/BuildTools/MSBuild/15.0/Bin"
+    install:
+      - pip3 install --upgrade pip
+      - pip3 install numpy scipy matplotlib sphinx sphinx_rtd_theme sphinxcontrib-bibtex breathe pytest
+      - pip3 install winshell
+    script:
+      - export PATH=$MSBUILD_PATH:$PATH
+      - python install.py --msbuild=msbuild.exe --nodocs --noshortcut
+      = ls OneDQuantum
+      # - python test/SimpleSchrodinger.py MP
 
