read the doc bug fix

--- a/docs/Makefile
+++ b/docs/Makefile
@@ -8,6 +8,7 @@ SOURCEDIR     = .
 BUILDDIR      = _build
 DOXYGENDIR    = ../OneDQuantum/docs
 DOXYGENXML    = ../OneDQuantum/docs/xml
+CLIBDIR       = ../OneDQuantum
 
 # Put it first so that "make" without argument is like "make help".
 help:
@@ -22,10 +23,14 @@ doxygen:
 clib: Makefile
 	breathe-apidoc -o $@ "$(DOXYGENXML)" 
 
+clib-bin: Makefile
+	cd "$(CLIBDIR)"; \
+	make
+
 clean:
 	@$(RM) -r $(BUILDDIR)
 
 # Catch-all target: route all unknown targets to Sphinx using the new
 # "make mode" option.  $(O) is meant as a shortcut for $(SPHINXOPTS).
-%: Makefile doxygen
+%: Makefile clib doxygen clib-bin
 	@$(SPHINXBUILD) -M $@ "$(SOURCEDIR)" "$(BUILDDIR)" $(SPHINXOPTS) $(O)
