--- a/.travis.yml
+++ b/.travis.yml
@@ -79,13 +79,14 @@ jobs:
     script:
       - export PATH=$MSBUILD_PATH:$PATH
       - echo $PATH
-      - cd OneDQuantum
+      - cd ErwinJr2/OneDQuantum
       - msbuild.exe OneDQuantum.sln //p:Configuration=Release
       - msbuild.exe OneDQuantum.sln //p:Configuration=MP_Release
       - cd ..
       # - python install.py --msbuild=msbuild.exe --nodocs --noshortcut
       - ls OneDQuantum
-      - python test/SimpleSchrodinger.py
-      - python test/SimpleSchrodinger.py MP
-      - pytest -v test/testQuantumWell.py
+      - cd ../test
+      - python SimpleSchrodinger.py
+      - python SimpleSchrodinger.py MP
+      - pytest -v testQuantumWell.py
 
