--- a/.travis.yml
+++ b/.travis.yml
@@ -74,7 +74,7 @@ jobs:
     install:
       - choco install python --version 3.8.0
       - python -m pip install --upgrade pip
-      - pip3 install wheel
+      - pip3 install wheel twine
       - pip3 install numpy scipy pyqt5 matplotlib pytest
       - export PATH=$MSBUILD_PATH:$PATH
       - echo $PATH
