--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -23,11 +23,17 @@ jobs:
       uses: actions/setup-python@v3
       with:
         python-version: "3.10"
+    - name: Build C Libs
+      run: |
+        cd ErwinJr2/OneDQuantum
+        make
+        make MP
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
-        pip install flake8 pytest
-        pip install -r requirements.txt
+        pip install -r requirements-dev.txt
+    - name: Test with flake8
+      run: flake8 ErwinJr2/ --count --show-source --statistics
     - name: Test with pytest
       run: |
-        pytest -v test/*
+        pytest -v --doctest-modules --junitxml=junit/test-results.xml --cov=com --cov-report=xml --cov-report=html test/*
