rename test -> tests

--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -44,5 +44,5 @@ jobs:
     - name: Test with pytest
       run: |
         pip install -e .
-        pytest -v --doctest-modules --junitxml=junit/test-results.xml --cov=com --cov-report=xml --cov-report=html test/*
-        python3 test/SimpleSchrodinger.py
+        pytest -v --doctest-modules --junitxml=junit/test-results.xml --cov=com --cov-report=xml --cov-report=html tests/*
+        python3 tests/SimpleSchrodinger.py
