--- a/ErwinJr2/OneDQuantum/Makefile
+++ b/ErwinJr2/OneDQuantum/Makefile
@@ -1,5 +1,5 @@
 SHELL=bash
-CFLAGS += -Ofast -Wall -Werror -fPIC
+CFLAGS += -Ofast -Wall -fPIC
 # CFLAGS += -D _DEBUG
 # CC = icc
 # CFLAGS = -march=native -Ofast -gcc-name=gcc-6 -Wall
@@ -20,6 +20,9 @@ else
 		EXT := so
 	endif
 endif
+
+PYTHON_INCLUDE = $(shell python -c "import sysconfig; print(sysconfig.get_paths()['include'])")
+NUMPY_INCLUDE = $(shell python -c "import numpy; print(numpy.get_include())")
 
 .PHONY : all
 .DEFAULT : all
@@ -47,6 +50,14 @@ band.o : band.c band.h
 fftautocorr.o : fftautocorr/fftautocorr.c fftautocorr/fftautocorr.h fftautocorr/factortable.h
 	$(CC) $(CFLAGS) -c $< -o $@
 
+c_schrodinger.c : c_schrodinger.pyx
+	cython $<
+c_schrodinger.o : c_schrodinger.c
+	$(CC) $(CFLAGS) -I$(PYTHON_INCLUDE) -I$(NUMPY_INCLUDE) -c $< -o $@
+c_schrodinger.so : c_schrodinger.o 1DSchrodinger_MP.o fftautocorr.o band.o
+	$(CC) -shared -fPIC $(OMPFLAGS) $^ -o $@ -lm $(LDFLAGS)
+
 .PHONY : clean
 clean :
 	@$(RM) {1DSchrodinger,1DSchrodinger_MP}.{so,o,dll,dylib} band.o fftautocorr.o
+	@$(RM) c_schrodinger.c c_schrodinger.o *.so
