--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,5 +1,5 @@
 [build-system]
-requires = ["setuptools", "wheel", "Cython"]
+requires = ["setuptools", "wheel", "Cython", "numpy"]
 build-backend = "setuptools.build_meta"
 
 [project]
@@ -26,8 +26,8 @@ classifiers = [
     "Topic :: Scientific/Engineering :: Physics",
     "Topic :: Scientific/Engineering :: Visualization",
 ]
-requires-python = ">=3.6"
-dependencies = ["numpy", "scipy"]
+requires-python = ">=3.8"
+dependencies = ["numpy>=2.0.0", "scipy"]
 dynamic = ["version"]
 
 [project.optional-dependencies]
